src/css/dessert-list.css
.dessert-list-section {
  background: var(--color-scheme-1-background);

  & .dessert-section__title {
    font-family: var(--second-family);
    font-weight: 700;
    font-size: 36px;
    line-height: 1.2;
    letter-spacing: -0.01em;
    text-align: center;
    color: var(--color-scheme-1-text);
    margin-bottom: 24px;

    @media screen and (min-width: 768px) and (max-width: 1439px) {
      text-align: left;
      margin-bottom: 8px;
    }

    @media screen and (min-width: 1440px) {
      font-size: 48px;
      margin-bottom: 24px;
    }
  }

  & .dessert-section__description {
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 18px;
    line-height: 1.5;
    text-align: center;
    color: var(--color-scheme-1-text);

    margin-bottom: 40px;

    @media screen and (min-width: 768px) and (max-width: 1439px) {
      margin-bottom: 0;
      max-width: 432px;
      text-align: start;
    }
  }
}

.dessert-category {
  display: flex;
  flex-direction: column;
  justify-content: center;

  @media screen and (min-width: 1440px) {
    align-items: center;
  }
}

.dessert-tablet__wrapper {
  @media screen and (min-width: 768px) and (max-width: 1439px) {
    display: flex;
    align-items: flex-end;
    gap: 16px;
    margin-bottom: 40px;
  }
}

.dessert-tablet-title-left-section {
  @media screen and (min-width: 768px) and (max-width: 1439px) {
    width: 432px;
  }
}

@media screen and (min-width: 1440px) {
  .dessert-category {
    flex-wrap: wrap;
    flex-direction: row;
    gap: 32px 24px;
    margin-bottom: 40px;
  }
}

.dessert-category__btn {
  border: none;
  background-color: transparent;

  font-family: var(--font-family);
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  color: var(--color-neutral-darkest);

  @media screen and (max-width: 1439px) {
    &.active__btn {
      border-bottom: 1px solid var(--color-neutral-darkest);
    }
  }

  @media screen and (min-width: 1440px) {
    border: 2px solid var(--color-neutral-darkest);
    border-radius: 100px;
    padding: 10px 24px;
    height: 44px;
    transition: background 250ms linear;

    &:hover,
    &:focus-visible {
      background: var(--color-wewak);
    }

    &.active__btn {
      background: var(--color-wewak-dark);

      &:hover,
      &:focus-visible {
        background: var(--color-wewak-light);
      }
    }
  }
}

.category-dropdown {
  position: relative;
  margin-bottom: 40px;

  @media screen and (min-width: 768px) {
    margin-bottom: 0;
  }
}

.category-dropdown__btn {
  display: none;
}

@media screen and (max-width: 1439px) {
  .category-dropdown__btn {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;

    border: 2px solid var(--color-neutral-darker);
    background: var(--opacity-transparent);
    border-radius: 6px;
    padding: 8px 12px;
    max-width: 335px;
    height: 40px;

    font-family: var(--font-family);
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
    color: var(--color-scheme-1-text);

    &:active {
      background: var(--color-ice-cold-lighter);
    }

    @media screen and (min-width: 768px) {
      min-width: 256px;
    }
  }

  .category-dropdown__arrow {
    display: flex;
    justify-content: center;
    align-items: center;

    position: absolute;
    right: 8px;
    top: 8px;

    transition: transform 250ms ease;
  }

  .category-dropdown.is-open .category-dropdown__arrow {
    transform: rotate(180deg);
  }

  .category-dropdown.is-open .category-dropdown__btn {
    background: var(--color-ice-cold-lighter);
  }

  .dessert-category {
    position: absolute;
    top: 130%;
    left: 0;
    width: 100%;

    display: flex;
    flex-direction: column;
    gap: 24px;

    background: var(--color-scheme-1-background);
    border: 2px solid var(--color-neutral-darker);
    border-radius: 6px;
    padding: 8px 12px;

    z-index: 10;

    opacity: 0;
    pointer-events: none;
    transform: translateY(-10px);
    transition: transform 250ms ease;
  }

  .category-dropdown.is-open .dessert-category {
    opacity: 1;
    pointer-events: auto;
    transform: translateY(0);

    background: var(--color-ice-cold-lighter);
  }
}

.dessert-list {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 40px;
  gap: 32px;

  @media screen and (min-width: 768px) {
    gap: 32px 16px;
  }

  @media screen and (min-width: 1440px) {
    gap: 40px 24px;
  }

  & .dessert-list__item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background: var(--color-scheme-1-foreground);

    border: 1px solid var(--color-scheme-1-border);
    border-radius: 16px;
    padding: 16px;

    @media screen and (min-width: 768px) {
      flex-basis: calc((100% - 16px) / 2);
    }

    @media screen and (min-width: 1440px) {
      flex-basis: calc((100% - 24px * 3) / 4);
    }

    & .dessert-list__image {
      border-radius: 8px;
      margin-bottom: 16px;
      width: 303px;
      height: 227px;
      display: none;
      transition: display 250ms linear;

      @media screen and (min-width: 768px) {
        width: 312px;
        height: 234px;
      }

      @media screen and (min-width: 1440px) {
        width: 278px;
        height: 209px;
      }

      &.img__is-loaded {
        display: block;
      }
    }

    & .dessert-list__title {
      font-family: var(--font-family);
      font-weight: 600;
      font-size: 18px;
      line-height: 1.5;
      color: var(--color-scheme-1-text);
      margin-bottom: 4px;
    }

    & .dessert-list__category {
      font-family: var(--font-family);
      font-size: 14px;
      line-height: 1.5;
      color: var(--color-scheme-1-text);
      margin-bottom: 12px;
    }

    & .dessert-list__description {
      font-family: var(--font-family);
      font-size: 14px;
      line-height: 1.5;
      color: var(--color-scheme-1-text);
    }

    & .dessert-list__icon {
      fill: #080c0c;
    }

    & .dessert-list__wrapper__bottom {
      display: flex;
      justify-content: space-between;
      align-items: center;

      & .dessert-list__price {
        font-family: var(--font-family);
        font-weight: 600;
        font-size: 20px;
        line-height: 1.5;
        color: var(--color-scheme-1-text);
      }

      & .dessert-list__btn {
        background-color: transparent;
        outline: transparent;
        line-height: 0;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: background 250ms linear;

        border: 2px solid var(--color-neutral-darkest);
        border-radius: 100px;
        width: 44px;
        height: 44px;

        &:hover,
        &:focus {
          background: var(--color-wewak);
        }

        &:active {
          background: var(--color-wewak-dark);
        }
      }
    }
  }
}

.dessert-load-more-btn {
  border: 1px solid var(--color-wewak);
  border-radius: 100px;
  width: 100%;
  max-width: 335px;
  height: 44px;
  margin: 0 auto;

  display: flex;
  align-items: center;
  justify-content: center;

  background: var(--color-wewak);

  font-family: var(--font-family);
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  color: var(--color-neutral-darkest);

  @media screen and (min-width: 768px) {
    max-width: 100%;
    width: 344px;
  }

  @media screen and (min-width: 1440px) {
    width: 198px;
  }

  transition:
    background 250ms linear,
    border 250ms linear;

  &:hover,
  &:focus-visible {
    border: 2px solid var(--color-neutral-darkest);
    background: transparent;
  }
}

.dessert-button-hidden {
  display: none;
}

.dessert-loader {
  margin: 0 auto;
}

.loader-sizes-skeleton {
  width: 301px;
  height: 227px;

  display: flex;
  align-items: center;
  justify-content: center;

  margin-bottom: 16px;

  @media screen and (min-width: 768px) {
    width: 310px;
    height: 234px;
  }

  @media screen and (min-width: 1440px) {
    width: 276px;
    height: 209px;
  }
}

.custom-skeleton__desserts {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 40px;
  gap: 32px;

  @media screen and (min-width: 768px) {
    gap: 32px 16px;
  }

  @media screen and (min-width: 1440px) {
    gap: 40px 24px;
  }
}

.dessert-list__skeleton {
  width: 335px;
  height: 427px;

  background: var(--color-scheme-1-foreground);
  border: 1px solid var(--color-scheme-1-border);
  border-radius: 16px;

  display: flex;
  justify-content: center;
  align-items: center;

  @media screen and (min-width: 768px) {
    width: 344px;
    height: 434px;
  }

  @media screen and (min-width: 1440px) {
    width: 310px;
    height: 430px;
  }
}

.category-wrapper__arrow {
  position: relative;

  display: flex;
  align-items: center;
  justify-content: center;

  width: 100%;

  max-width: 335px;

  @media screen and (min-width: 768px) {
    min-width: 256px;
  }

  @media screen and (min-width: 1440px) {
    display: none;
  }
}

